# kr1-korshikov

./: KR1_Korshikov_Ruslan_EFBO-06-24.docx
KR1/: hello.h
kr2-3/paintcpp/: CMakeLists.txt  FOR_BUILD.txt  drawing.txt
kr2-3/paintcpp/src/: Canvas.cpp  main.cpp
kr4-5/paintcpp/: #U041e#U0442#U0447#U0451#U0442_#U041a#U043e#U0440#U0448#U0438#U043a#U043e#U0432_#U0420#U0443#U0441#U043b#U0430#U043d_#U042d#U0424#U0411#U041e-06-24.docx  CMakeLists.txt  Dockerfile  FOR_BUILD.txt  README.md  docker-compose.yml  Отчёт_Коршиков_Руслан_ЭФБО-06-24_КР5.docx
kr4-5/paintcpp/src/: Canvas.cpp  Canvas.h  PaintContext.cpp  PaintContext.h  main.cpp
kr4-5/paintcpp/tests/: CMakeLists.txt  test_canvas.cpp  test_paint_context.cpp  test_scenarios.cpp
